# ks

Task3/: CMakeLists.txt
Task3/inc/: CookingRecipe.h  generator.h  myjson.h
Task3/src/: CookingRecipe.cpp  generator.cpp  main.cpp  myjson.cpp
Task_build/: CMakeCache.txt  Makefile  cmake_install.cmake  data.json  main
Task_build/ext/nlohmann/: Makefile  cmake_install.cmake
